--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </nav>
     <section id="main1">
         <div class="profile-image">
-            <img src="assests/images.jfif" alt="">
+            <img src="pngtree-young-girl-with-laptop-png-image_14489685.png" alt="girl-using-laptop">
         </div>
-        <div class="text">
+        <div class="main1-text">
             <h3>Hello!I'm</h3>
             <h1>Sindhuja Mahendrakumar</h1>
             <P>MERN Stack Developer</P>
@@ -40,19 +40,19 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section-pic-container">
-                <img src="./assests/pngtree-cute-girl-using-laptop.png" alt="">
+                <img src="pngtree-cute-girl-using-laptop.png" alt="">
             </div>
             <div class="about-details-container">
              <div class="about-containers">
                 <div class="details-containers">
-                     <img src="./assests/award_3395949.png" height="30px" width="30px" alt="expereince-image" class="experience">
+                     <img src="award_3395949.png" height="30px" width="30px" alt="expereince-image" class="experience">
                 </div>
                 <h3>Experience</h3>
                 <p>I'm a fresher with hands-on MERN project and internship experience.</p>
              </div>
              <div class="about-containers">
                 <div class="details-container">
-                     <img src="./assests/education.png" height="30px" width="30px" alt="education-mage" class="education">
+                     <img src="education.png" height="30px" width="30px" alt="education-mage" class="education">
                 </div>
                 <h3>Education</h3>
                 <p>Bachelor Of Engineering <br>Electronics And Commuication Engineering
@@ -70,7 +70,7 @@
             <div class="wrapper">
             <div class="details-container color-container">
                 <div class="artcle-container">
-                    <img src="./assests/images (1).jfif" alt="project1"
+                    <img src="images (1).jfif" alt="project1"
                     class="project-1">
                 </div>
                 <h2 class="experience-sub-title project-title">Project One</h2>
@@ -82,7 +82,7 @@
             </div>
              <div class="details-container color-container">
                 <div class="artcle-container">
-                    <img src="./assests/images (1).jfif" alt="project1"
+                    <img src="images (1).jfif" alt="project1"
                     class="project-1">
                 </div>
                 <h2 class="experience-sub-title project-title">Project Two</h2>
@@ -95,7 +95,7 @@
             
              <div class="details-container color-container">
                 <div class="artcle-container">
-                    <img src="./assests/images (1).jfif" alt="project1" 
+                    <img src="images (1).jfif" alt="project1" 
                     class="project-1">
                 </div>
                 <h2 class="experience-sub-title project-title">Project Three</h2>
@@ -113,12 +113,12 @@
         <h1 class="title">Contact Me</h1>
             <div class="contact-info-upper-container">
                <div class="contact-info-container">
-                  <img src="./assests/mail.png" height="30px"  width="30px" alt="email-icon"
+                  <img src="mail.png" height="30px"  width="30px" alt="email-icon"
                   class="icon contact-icon"/>
                   <p><a href="mailto:example@gmail.com">sindhujajuly@gmail.com</a></p>
                </div>
                <div class="contact-info-container">
-                  <img src="./assests/linkedin.png"  height="30px"  width="30px" alt="linkedin-icon"
+                  <img src="linkedin.png"  height="30px"  width="30px" alt="linkedin-icon"
                   class="icon contact-icon"/>
                   <p><a href="https://www.linkedin.com">LinkedIn</a></p>
                </div>
